@@ -1,3 +1,9 @@
+AVRTSB 0.2.3  2015-04-26 (develompent version)
+  Send "q"uit command when TSBLoader.Close()
+  Make firmware for ATTiny fixed - add Checksum function
+  flashWrite timeout for ATTiny fixed
+  Translation issues
+
 AVRTSB 0.2.2  2015-04-24 (development version)
   Fixed many critical errors - firmware uploading, verification
   Change of userdata everytimes throw exception - fixed
